Added Memory Mesurements